unpackaged/objects/Permanence_Residency__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Permanent Resident Status</relationshipLabel>
        <relationshipName>Permanence_Residency</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_obtained__c</fullName>
        <label>Year obtained</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Permanence Residency</label>
    <nameField>
        <displayFormat>PR-{0000000000}</displayFormat>
        <label>Permanence Residency ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permanence Residency</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>